--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -5,6 +5,10 @@ layout: default
 <article>
 
   <div>
+
+	<h1 class="text-center">{{ page.title }}</h1>
+	<p>&nbsp;</p>
+
     {{ content }}
   </div>
 
