Generate pages for each collection item
- set a default layout for to each collection in _config.yml
- set output:true in _config.yml to generate collection item pages
- change example collection items to the correct structure and naming
- update gallery page to link to each collection item page
- add layout for video items (video-item.html)
- update styles for collection item pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,9 +99,11 @@ nav {
   margin-top: 28px;
 }
 
-.wrapper {
-  max-width: 900px;
-  margin: 0 auto;
+@media (max-width: 769px) {
+  .wrapper {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 
 .text-center {
@@ -115,7 +117,7 @@ nav {
 }
 
 
-/* Styles
+/* Styles and colours
  * ----------------------------------------------
  */
 body {
@@ -142,7 +144,13 @@ header, footer {
   color: #474546;
 }
 
+.site-header, .site-footer {
+  border: 0;
+}
 
+.site-footer {
+  margin-top: 100px;
+}
 
 
 /* Video gallery
@@ -191,3 +199,36 @@ header, footer {
   filter: brightness(1.35);
 }
 
+/* Video item
+ * ----------------------------------------------
+ */
+h1.video-item-title {
+  font-family: tungsten-condensed;
+  font-size: 40px;
+  letter-spacing: 4px;
+}
+
+
+.single-video-wrapper {
+  width: 85%;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom: 45.94%;
+  margin-top: 50px;
+  height: 0;
+  overflow: hidden;
+}
+
+@media (max-width: 899px) {
+  .single-video-wrapper {
+    width: 100%;
+  }
+}
+
+.video-embed {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
