Black theme, add video to home and gallery page
- update gallery in _layouts to include video
- update parameters in gallery page music.md to reflect this
- add video from ST to index.md and music.md as example
- add styles for .video-full class
- typography changes and black background, white text in CSS styles

--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -4,12 +4,14 @@ layout: default
 
 <article>
 
-  <div>
-
-	<h1 class="text-center">{{ page.title }}</h1>
-	<p>&nbsp;</p>
-
-    {{ content }}
+  <div class="video-full" data-src="{{ page.placeholder }}" data-video="{{ page.embed_video_mp4 }}" data-placeholder="{{ page.placeholder }}">
+    <video preload="auto" autoplay="autoplay" muted="muted" loop="" poster="{{ page. placeholder }}"><source src="{{ page.embed_video_ogg }}" type="video/ogg">
+    </video>
   </div>
+
+  <h1 class="text-center">{{ page.title }}</h1>
+  <p>&nbsp;</p>
+
+  {{ content }}
 
 </article>
