--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,20 +3,14 @@
 
   <div class="wrapper">
 
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-          {%- include social.html -%}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <h3>{{ site.author }}</h3>
-        <p>{{- site.description | escape -}}</p>
-      </div>
+    <ul class="social">
+    <li><a href="https://imdb.com/{{ site.imdb | escape }}" title="{{ site.imdb | escape }}">IMDB</a></li>
+    <li><a href="https://instagram.com/{{ site.instagram | youtube }}" YOUTUBE="{{ site.instagram | escape }}">INSTAGRAM</a></li>
+    <li><a href="https://vimeo.com/{{ site.vimeo | escape }}" title="{{ site.vimeo | escape }}">VIMEO</a></li>
+    <li><a href="https://youtube.com/channel/{{ site.youtube | escape }}" title="{{ site.youtube | escape }}">YOUTUBE</a></li>
+    <li><a href="https://behance.net/{{ site.behance | escape }}" title="{{ site.behance | escape }}">BEHANCE</a></li>
+    <li><a href="https://linkedin.com/in/{{ site.linkedin | escape }}" title="{{ site.linkedin | escape }}">LINKEDIN</a></li>
+    </ul>
 
   </div>
 
