--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,9 +186,12 @@ ul.social li a {
 }
 
 .video-gallery {
-  width: 100%;
+  width: 85%;
 	margin-top: 60px;
   margin-bottom: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .video-gallery .inner {
