--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,10 @@ nav {
   }
 }
 
+article {
+  min-height: calc(100vh - 272px);
+}
+
 .text-center {
   text-align: center;
   margin-left: auto;
