Add gallery pages for commercial and narrative
- update navigation and permalinks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,15 +20,14 @@
             </label>
 
             <div class="trigger">
-              <a class="page-link" href="/narrative-film">narrative film</a>
-              <a class="page-link" href="/music-videos">music video</a>
+              <a class="page-link" href="/narrative">narrative</a>
+              <a class="page-link" href="/music">music</a>
               <a class="page-link" href="/commercial">commercial</a>
-              <a class="page-link" href="/corporate">corporate</a>
               <a class="page-link" href="/about">about</a>
               <a class="page-link" href="/contact">contact</a>
             </div>
           </nav>
         {%- endif -%}
       </div>
-    
+
 </header>
