--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,27 +239,32 @@ ul.social li a {
 .cinema-mode {
   width: 100%;
   height: auto;
-  background: #000;
 }
 
 .single-video-wrapper {
-  width: 85%;
+  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   position: relative;
-  padding-bottom: 45.94%;
-  margin-top: 50px;
   height: 0;
   overflow: hidden;
 }
 
-@media (max-width: 899px) {
+@media (max-width: 1199px) {
   .single-video-wrapper {
-    width: 100%;
-    padding-bottom: 43%;
+    padding-bottom: 42%;
   }
-
   .cinema-mode {
     background: #fff;
+  }
+}
+
+@media (min-width: 1200px) {
+  .single-video-wrapper {
+    padding-bottom: 675px;
+  }
+  .cinema-mode {
+    background: #000;
   }
 }
 
