--- a/_layouts/video-item.html
+++ b/_layouts/video-item.html
@@ -18,7 +18,7 @@ layout: default
 
   <div class="wrapper">
     <h1 class="video-item-title text-center">{{ page.title }}</h1>
-    <div class="video-item-body">
+    <div class="video-item-body text-center">
       <p>
       Directed by: {{ page.dir }}<br/>
       Producer: {{ page.prod }}<br/>
@@ -41,21 +41,81 @@ layout: default
     </div>
   </div>
 
-   <div class="image-gallery">
-     {% for img in page.stills %}
-       {% assign mod = forloop.index0 | modulo : 2 %}
+  <div class="image-gallery">
+    {% for img in page.stills %}
+      {% assign mod = forloop.index0 | modulo : 2 %}
+      {% if mod == 0 %}
+      <div class="inner">
+      {% endif %}
+      <a>
+         <img src="{{ img }}">
+      </a>
+      {% if mod == 1 %}
+      </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+
+  <div class="wrapper video-item-body">
+    <h2 class="text-center">Related</h2>
+  </div>
+
+  <div class="video-gallery">
+    {% if page.collection == "music" %}
+
+     {% for video in site.music reversed %}
+       {% assign mod = forloop.index0 | modulo : 3 %}
+       {% if mod == 0 %}
+         <div class="inner">
+       {% endif %}
+         <a href="{{ video.url }}">
+           <img src="{{ video.thumb }}">
+         <h2 class="text-center">{{ video.title }}</h2>
+         <h4 class="text-center">Dir. {{ video.dir }}</h4>
+         </a>
+       {% if mod == 2 %}
+         </div>
+         {% break %}
+       {% endif %}
+     {% endfor %}
+
+   {% elsif page.collection == "commercial" %}
+
+     {% for video in site.commercial reversed %}
+       {% assign mod = forloop.index0 | modulo : 3 %}
        {% if mod == 0 %}
        <div class="inner">
        {% endif %}
-       <a href="">
-          <img src="{{ img }}">
+       <a href="{{ video.url }}">
+         <img src="{{ video.thumb }}">
+         <h2 class="text-center">{{ video.title }}</h2>
+         <h4 class="text-center">Dir. {{ video.dir }}</h4>
        </a>
-       {% if mod == 1 %}
-       </div>
+       {% if mod == 2 %}
+         </div>
+         {% break %}
        {% endif %}
      {% endfor %}
-   </div>
+
+   {% elsif page.collection == "narrative" %}
+
+     {% for video in site.narrative reversed %}
+       {% assign mod = forloop.index0 | modulo : 3 %}
+       {% if mod == 0 %}
+       <div class="inner">
+       {% endif %}
+       <a href="{{ video.url }}">
+         <img src="{{ video.thumb }}">
+         <h2 class="text-center">{{ video.title }}</h2>
+         <h4 class="text-center">Dir. {{ video.dir }}</h4>
+       </a>
+       {% if mod == 2 %}
+         </div>
+      {% break %}
+       {% endif %}
+     {% endfor %}
+
+   {% endif %}
+  </div>
 
 </article>
-
-
