--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,15 @@ h1, h1 a, h2, h2 a {
   text-transform: uppercase;
 }
 
+h1, h1 a, h1 a:hover, h1 a:visited,
+h2, h2 a, h2 a:hover, h2 a:visited,
+h3, h3 a, h3 a:hover, h3 a:visited,
+h4, h4 a, h4 a:hover, h4 a:visited,
+h5, h5 a, h5 a:hover, h5 a:visited,
+h6, h6 a, h6 a:hover, h6 a:visited {
+  text-decoration: none;
+}
+
 h1, h1 a {
   font-size: 40px;
   margin-top: 30px;
@@ -64,14 +73,12 @@ nav .page-link {
   line-height: 20px;
   margin-top: 20px;
   margin-bottom: 5px;
-  text-decoration: none;
 }
 
 .logo h2 a {
   font-family: tungsten-condensed;
   line-height: 20px;
   margin-bottom: 25px;
-  text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 5.5px;
   font-size: 28px;
@@ -129,7 +136,7 @@ body {
   background: #fff;
 }
 
-h1, h1 a, h2, h2 a, h3, h3 a {
+h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a {
   color: #141213;
 }
 
@@ -189,7 +196,8 @@ ul.social li a {
   height: 100%;
 }
 
-.video-gallery, .image-gallery {
+.video-gallery,
+.image-gallery {
   width: 85%;
   margin-top: 60px;
   margin-left: auto;
@@ -197,18 +205,23 @@ ul.social li a {
   display: block;
 }
 
-.video-gallery .inner, .image-gallery .inner {
+.video-gallery .inner,
+.image-gallery .inner {
   width: 100%;
   display: flex;
   margin-bottom: 120px;
 }
 
-.video-gallery a, .image-gallery a {
-	flex: 1;
+.video-gallery a,
+.image-gallery a {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  text-decoration: none;
 }
 
 @media (min-width:768px) {
-  .video-gallery .inner, .image-gallery .inner {
+  .video-gallery .inner,
+  .image-gallery .inner {
     flex-direction: row;
   }
 
@@ -245,7 +258,32 @@ ul.social li a {
 
 .video-gallery a:hover,
 .image-gallery a:hover {
-  filter: brightness(1.35);
+  filter: brightness(1.3);
+  transition: all 1s ease-in-out;
+}
+
+.video-gallery a:hover > h2, .video-gallery a:hover > h4 {
+  transition: all 1s ease-in-out;
+  opacity: 0;
+}
+
+.video-gallery h2 {
+  margin-top: -25%;
+  display: block;
+  color: #fff;
+  letter-spacing: 1.5px;
+  text-shadow: 0 0 20px #000;
+  transition: all 1s ease-in-out;
+}
+.video-gallery h4 {
+  margin-top: -20px;
+  display: block;
+  color: #fff;
+  text-shadow: 0 0 20px #000;
+  letter-spacing: 0;
+  font-size: 17px;
+  margin-bottom: 60px;
+  transition: all 1s ease-in-out;
 }
 
 /* Video item
@@ -261,7 +299,7 @@ ul.social li a {
   width: 85%;
   margin: 0 auto;
   position: relative;
-  padding-bottom: 45.94%;
+  padding-bottom: 42%;
   margin-top: 50px;
   height: 0;
   overflow: hidden;
@@ -270,7 +308,7 @@ ul.social li a {
 @media (max-width: 899px) {
   .single-video-wrapper {
     width: 100%;
-    padding-bottom: 43%;
+    padding-bottom: 42%;
   }
 
   .cinema-mode {
@@ -284,4 +322,9 @@ ul.social li a {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.video-item-body h2 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
