--- a/_layouts/video-item.html
+++ b/_layouts/video-item.html
@@ -16,9 +16,9 @@ layout: default
     </div>
   </div>
 
-  <div class="wrapper">
-    <h1 class="video-item-title text-center">{{ page.title }}</h1>
-    <div class="video-item-body text-center">
+  <div class="wrapper video-item-body">
+    <h1 class="text-center">{{ page.title }}</h1>
+    <div class="text-center">
       <p>
       Directed by: {{ page.dir }}<br/>
       Producer: {{ page.prod }}<br/>
