--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -27,11 +27,9 @@ layout: default
   </div>
 {% endif %}
 
-
-</div>
-
-  <h1 class="text-center">{{ page.title }}</h1>
-  <p>&nbsp;</p>
+  <div class="wrapper video-gallery-body">
+    <h1 class="text-center">{{ page.title }}</h1>
+  </div>
 
   {{ content }}
 
