--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ body, p, li, span, ol, ul, table, a {
   word-spacing: 3px;
 }
 
+header {
+  height: 56px;
+}
+
 footer {
   font-size: 18px;
 }
@@ -65,29 +69,29 @@ nav .page-link {
   font-size: 18px;
 }
 
-.logo h1 a {
-  font-family: futura-pt;
-  text-transform: none;
-  letter-spacing: 2px;
-  font-size: 24px;
-  line-height: 20px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-.logo h2 a {
-  font-family: tungsten-condensed;
-  line-height: 20px;
-  margin-bottom: 25px;
-  text-transform: uppercase;
-  letter-spacing: 5.5px;
-  font-size: 28px;
-}
-
 .logo h1, .logo h2 {
   margin: 0;
 }
 
+.logo h1 a {
+  font-family: tungsten-condensed;
+  line-height: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 3.4px;
+  font-size: 34px;
+}
+
+.logo h2 a {
+  font-family: montserrat;
+  text-transform: lowercase;
+  font-variant: small-caps;
+  letter-spacing: 1.5px;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 22px;
+  text-decoration: none;
+}
 
 
 /* Layout
@@ -115,7 +119,7 @@ nav {
 }
 
 article {
-  min-height: calc(100vh - 272px);
+  min-height: calc(100vh - 280px);
 }
 
 .text-center {
@@ -128,6 +132,10 @@ article {
   float: left;
 }
 
+.site-nav {
+  line-height: 40px;
+}
+
 
 /* Styles and colours
  * ----------------------------------------------
@@ -137,7 +145,7 @@ body {
 }
 
 h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a {
-  color: #141213;
+  color: #242223;
 }
 
 p, a, a:hover, a:visited {
@@ -153,11 +161,11 @@ header, footer {
 }
 
 .logo h1, .logo h1 a {
-  color: #464445;
+  color: #161415;
 }
 
 .logo h2, .logo h2 a, nav a, .site-nav .page-link {
-  color: #272526;
+  color: #464445;
 }
 
 .site-header, .site-footer {
@@ -165,7 +173,7 @@ header, footer {
 }
 
 .site-footer {
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 ul.social {
@@ -182,11 +190,11 @@ ul.social li a {
   font-size: 14px;
 }
 
-/* Video & image gallery
+/* Full-width video & images
  * ----------------------------------------------
  */
 .video-full {
-  margin-top: 20px;
+  margin-top: 40px;
   width: 85vw;
   margin-left: 7.5vw;
 }
@@ -196,6 +204,46 @@ ul.social li a {
   height: 100%;
 }
 
+.video-embed {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* Full screen video and image containers */
+.cinema-mode {
+  width: 100%;
+  height: auto;
+  background: #000;
+}
+
+.single-video-wrapper {
+  width: 85%;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom: 42%;
+  margin-top: 50px;
+  height: 0;
+  overflow: hidden;
+}
+
+@media (max-width: 899px) {
+  .single-video-wrapper {
+    width: 100%;
+    padding-bottom: 42%;
+  }
+
+  .cinema-mode {
+    background: #fff;
+  }
+}
+
+
+/* Video & image gallery
+ * ----------------------------------------------
+ */
 .video-gallery,
 .image-gallery {
   width: 85%;
@@ -249,6 +297,11 @@ ul.social li a {
   	width: 100%;
     display: block;
   }
+
+  .video-gallery .inner,
+  .image-gallery .inner {
+  margin-bottom: 10px;
+  }
 }
 
 .video-gallery a img,
@@ -286,42 +339,13 @@ ul.social li a {
   transition: all 1s ease-in-out;
 }
 
-/* Video item
+
+/* Page content layout
  * ----------------------------------------------
  */
-.cinema-mode {
-  width: 100%;
-  height: auto;
-  background: #000;
-}
-
-.single-video-wrapper {
-  width: 85%;
-  margin: 0 auto;
-  position: relative;
-  padding-bottom: 42%;
-  margin-top: 50px;
-  height: 0;
-  overflow: hidden;
-}
-
-@media (max-width: 899px) {
-  .single-video-wrapper {
-    width: 100%;
-    padding-bottom: 42%;
-  }
-
-  .cinema-mode {
-    background: #fff;
-  }
-}
-
-.video-embed {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+.video-gallery-body h1 {
+  margin-top: 60px;
+  margin-bottom: 0;
 }
 
 .video-item-body h2 {
