Add social icons to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,10 @@
   <div class="wrapper">
 
     <ul class="social">
-    <li><a href="https://imdb.com/{{ site.imdb | escape }}" title="{{ site.imdb | escape }}">IMDB</a></li>
-    <li><a href="https://instagram.com/{{ site.instagram | youtube }}" YOUTUBE="{{ site.instagram | escape }}">INSTAGRAM</a></li>
-    <li><a href="https://vimeo.com/{{ site.vimeo | escape }}" title="{{ site.vimeo | escape }}">VIMEO</a></li>
-    <li><a href="https://youtube.com/channel/{{ site.youtube | escape }}" title="{{ site.youtube | escape }}">YOUTUBE</a></li>
-    <li><a href="https://behance.net/{{ site.behance | escape }}" title="{{ site.behance | escape }}">BEHANCE</a></li>
-    <li><a href="https://linkedin.com/in/{{ site.linkedin | escape }}" title="{{ site.linkedin | escape }}">LINKEDIN</a></li>
+    <li><a target="_blank" href="https://imdb.com/{{ site.imdb | escape }}"              ><img src="/assets/img/social/imdb.svg">    </a></li>
+    <li><a target="_blank" href="https://vimeo.com/{{ site.vimeo | escape }}"            ><img src="/assets/img/social/vimeo.svg">   </a></li>
+    <li><a target="_blank" href="https://instagram.com/{{ site.instagram | escape }}"    ><img src="/assets/img/social/insta.svg">   </a></li>
+    <li><a target="_blank" href="https://behance.net/{{ site.behance | escape }}"        ><img src="/assets/img/social/behance.svg"> </a></li>
     </ul>
 
   </div>
