--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,11 +20,12 @@
             </label>
 
             <div class="trigger">
-              <a class="page-link" href="/narrative">narrative</a>
-              <a class="page-link" href="/music">music</a>
-              <a class="page-link" href="/commercial">commercial</a>
-              <a class="page-link" href="/about">about</a>
-              <a class="page-link" href="/contact">contact</a>
+              {%- for path in page_paths -%}
+                {%- assign my_page = site.pages | where: "path", path | first -%}
+                {%- if my_page.menu -%}
+                <a class={% if page.url == my_page.permalink %}"page-link current"{% else %}"page-link"{% endif %} href="{{ my_page.url | relative_url }}">{{ my_page.menu | escape }}</a>
+			    {%- endif -%}
+              {%- endfor -%}
             </div>
           </nav>
         {%- endif -%}
