Capitalise text in video item

--- a/_layouts/video-item.html
+++ b/_layouts/video-item.html
@@ -22,7 +22,7 @@ layout: default
       <p>
       Directed by: {{ page.dir }}<br/>
       Producer: {{ page.prod }}<br/>
-      Production company: {{ page.comp }}</br>
+      Production Company: {{ page.comp }}</br>
 
       {% if page.agency %}
           Agency: {{ page.agency }}<br/>
