--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,13 @@ strong {
   font-weight: 900;
 }
 
+.site-nav a {
+  transition: all 0.5s ease-in;
+}
+.site-nav a:hover {
+  transition: all 0.4s ease-in-out;
+}
+
 @media screen and (max-width: 899px) {
   .site-nav {
     position:absolute;
@@ -108,7 +115,7 @@ strong {
   .site-nav input:checked ~ .trigger {
     display:block;
     padding-bottom:5px;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
     width: 100%;
     height: 100%;
     z-index: 1000;
@@ -142,7 +149,6 @@ strong {
 
   nav a.current:hover {
     text-decoration: none;
-    transition: all 0.4s ease-in-out;
   }
 }
 
