--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header class="site-header" role="banner">
 
       <div class="logo">
-        <h1><a href="/">{{ site.title | escape }}</a></h1>
-        <h2><a href="/">{{ site.subtitle | escape }}</a></h2>
+        <h1 class="hide"><a href="/">{{ site.title | escape }}</a></h1>
+        <h2 class="hide"><a href="/">{{ site.subtitle | escape }}</a></h2>
+        <img src="/assets/img/logo.png">
       </div>
 
       <div class="main-menu">
