--- a/_layouts/video-item.html
+++ b/_layouts/video-item.html
@@ -61,21 +61,23 @@ layout: default
   </div>
 
   <div class="video-gallery">
+    <div class="inner">
     {% if page.collection == "music" %}
 
+     {% assign show_vids=3 %}
+
      {% for video in site.music reversed %}
-       {% assign mod = forloop.index0 | modulo : 3 %}
-       {% if mod == 0 %}
-         <div class="inner">
+       {% if forloop.index0 == show_vids %}
+          {% break %}
        {% endif %}
-         <a href="{{ video.url }}">
+       {% if video.url != page.url %}
+           <a href="{{ video.url }}">
            <img src="{{ video.thumb }}">
-         <h2 class="text-center">{{ video.title }}</h2>
-         <h4 class="text-center">Dir. {{ video.dir }}</h4>
-         </a>
-       {% if mod == 2 %}
-         </div>
-         {% break %}
+           <h2 class="text-center">{{ video.title }}</h2>
+           <h4 class="text-center">Dir. {{ video.dir }}</h4>
+           </a>
+       {% else %}
+            {% assign show_vids = 4 %}
        {% endif %}
      {% endfor %}
 
@@ -84,7 +86,6 @@ layout: default
      {% for video in site.commercial reversed %}
        {% assign mod = forloop.index0 | modulo : 3 %}
        {% if mod == 0 %}
-       <div class="inner">
        {% endif %}
        <a href="{{ video.url }}">
          <img src="{{ video.thumb }}">
@@ -92,7 +93,6 @@ layout: default
          <h4 class="text-center">Dir. {{ video.dir }}</h4>
        </a>
        {% if mod == 2 %}
-         </div>
          {% break %}
        {% endif %}
      {% endfor %}
@@ -102,7 +102,6 @@ layout: default
      {% for video in site.narrative reversed %}
        {% assign mod = forloop.index0 | modulo : 3 %}
        {% if mod == 0 %}
-       <div class="inner">
        {% endif %}
        <a href="{{ video.url }}">
          <img src="{{ video.thumb }}">
@@ -110,12 +109,12 @@ layout: default
          <h4 class="text-center">Dir. {{ video.dir }}</h4>
        </a>
        {% if mod == 2 %}
-         </div>
       {% break %}
        {% endif %}
      {% endfor %}
 
-   {% endif %}
+    {% endif %}
+    </div>
   </div>
 
 </article>
