--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,11 +74,10 @@ strong {
   .site-nav {
     background-color: transparent !important;
     position:absolute;
+    width:100vw;
     top:0;
     right:0;
     margin: 0;
-    width: 100vw;
-    height: 100vh;
     text-align:center;
     font-size: 3em;
     letter-spacing: 4px;
@@ -114,11 +113,13 @@ strong {
     display:none
   }
   .site-nav input:checked ~ .trigger {
-    display:block;
-    padding-bottom:5px;
+    display: block;
+    padding-bottom: 5px;
     background-color: rgba(0,0,0,0.8);
-    width: 100%;
-    height: 100%;
+    top: 0px;
+    left: 0px;
+    height: 100vh;
+    width: 100vw;
     z-index: 1000;
     position: absolute;
     vertical-align: middle;
