Make menu a link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <div class="logo">
         <h1 class="hide"><a href="/">{{ site.title | escape }}</a></h1>
         <h2 class="hide"><a href="/">{{ site.subtitle | escape }}</a></h2>
-        <img src="/assets/img/logo.png">
+        <a href="/"><img src="/assets/img/logo.png"></a>
       </div>
 
       <div class="main-menu">
