--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,61 +13,77 @@
 }
 
 
-
-/* Typography
+/* Layout
  * ----------------------------------------------
  */
 
-h1, h1 a, h2, h2 a {
-  font-family: tungsten-condensed;
-  letter-spacing: 5px;
-  display: table;
-  text-transform: uppercase;
+/* reset body */
+body {
+  margin: 0;
 }
 
-h1, h1 a, h1 a:hover, h1 a:visited,
-h2, h2 a, h2 a:hover, h2 a:visited,
-h3, h3 a, h3 a:hover, h3 a:visited,
-h4, h4 a, h4 a:hover, h4 a:visited,
-h5, h5 a, h5 a:hover, h5 a:visited,
-h6, h6 a, h6 a:hover, h6 a:visited {
-  text-decoration: none;
+/* generic modifiers */
+.hide {
+  display: none;
 }
 
-h1, h1 a {
-  font-size: 40px;
-  margin-top: 30px;
+.text-center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* -------------- responsive widths & heights */
+@media (max-width: 899px) {
+  .wrapper {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 0;
+  }
+}
+
+.wrapper {
+  max-width: calc(1200px - (30px * 2));
+}
+
+article {
+  min-height: calc(100vh - 280px);
 }
 
 
-body, p, li, span, ol, ul, table, a {
-  font-size: 18px;
-  font-family: futura-pt;
-  letter-spacing: 1px;
-  word-spacing: 3px;
+/* -------------------------- header & footer */
+@media (max-width: 899px) {
+  header, footer {
+    padding: 0 30px;
+  }
+}
+@media (min-width: 900px) {
+  header, footer {
+    padding: 0 7.5vw;
+  }
 }
 
+.site-header, .site-footer {
+  border: 0;
+}
+
+/* header */
 header {
   height: 56px;
 }
 
-footer {
-  font-size: 18px;
+.logo {
+  float: left;
+  padding-top: 28px;
 }
 
-main p a, main li a {
-  text-decoration: underline;
+/* menu */
+nav {
+  margin-top: 28px;
 }
 
-strong {
-  font-weight: 900;
-}
-
-.site-nav a {
-  transition: all 0.5s ease-in;
-}
-.site-nav a:hover {
-  transition: all 0.4s ease-in-out;
+.site-nav {
+  line-height: 40px;
 }
 
 @media screen and (max-width: 899px) {
@@ -155,93 +171,7 @@ strong {
   }
 }
 
-/* Layout
- * ----------------------------------------------
- */
-
-/* reset body */
-body {
-  margin: 0;
-}
-
-.hide {
-  display: none;
-}
-
-header, footer {
-  padding: 0 7.5vw;
-}
-
-nav {
-  margin-top: 28px;
-}
-
-@media (max-width: 769px) {
-  .wrapper {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-}
-
-.wrapper {
-  max-width: calc(1200px - (30px * 2));
-}
-
-article {
-  min-height: calc(100vh - 280px);
-}
-
-.text-center {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.logo {
-  float: left;
-  padding-top: 28px;
-}
-
-.site-nav {
-  line-height: 40px;
-}
-
-
-/* Styles and colours
- * ----------------------------------------------
- */
-body {
-  background: #fff;
-}
-
-h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a {
-  color: #242223;
-}
-
-p, a, a:hover, a:visited {
-  color: #464445;
-}
-
-li a {
-  text-decoration: none;
-}
-
-header, footer {
-  background-color: transparent;
-}
-
-.logo h1, .logo h1 a {
-  color: #161415;
-}
-
-.logo h2, .logo h2 a, nav a, .site-nav .page-link {
-  color: #464445;
-}
-
-.site-header, .site-footer {
-  border: 0;
-}
-
+/* footer */
 .site-footer {
   margin-top: 40px;
 }
@@ -259,13 +189,105 @@ ul.social li {
   text-align: center;
 }
 
+
+/* Typography, colours & styles
+ * ----------------------------------------------
+ */
+
+h1, h1 a, h2, h2 a {
+  font-family: tungsten-condensed;
+  letter-spacing: 5px;
+  display: table;
+  text-transform: uppercase;
+}
+
+h1, h1 a, h1 a:hover, h1 a:visited,
+h2, h2 a, h2 a:hover, h2 a:visited,
+h3, h3 a, h3 a:hover, h3 a:visited,
+h4, h4 a, h4 a:hover, h4 a:visited,
+h5, h5 a, h5 a:hover, h5 a:visited,
+h6, h6 a, h6 a:hover, h6 a:visited {
+  text-decoration: none;
+}
+
+h1, h1 a {
+  font-size: 40px;
+  margin-top: 30px;
+}
+
+body, p, li, span, ol, ul, table, a {
+  font-size: 18px;
+  font-family: futura-pt;
+  letter-spacing: 1px;
+  word-spacing: 3px;
+}
+
+footer {
+  font-size: 18px;
+}
+
+li a {
+  text-decoration: none;
+}
+
+main p a, main li a {
+  text-decoration: underline;
+}
+
+strong {
+  font-weight: 900;
+}
+
+.site-nav a {
+  transition: all 0.5s ease-in;
+}
+.site-nav a:hover {
+  transition: all 0.4s ease-in-out;
+}
+
+/* ---------------------------------- colours */
+body {
+  background: #fff;
+}
+
+h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a {
+  color: #242223;
+}
+
+p, a, a:hover, a:visited {
+  color: #464445;
+}
+
+header, footer {
+  background-color: transparent;
+}
+
+.logo h1, .logo h1 a {
+  color: #161415;
+}
+
+.logo h2, .logo h2 a, nav a, .site-nav .page-link {
+  color: #464445;
+}
+
+
 /* Full-width video & images
  * ----------------------------------------------
  */
 .video-full {
   margin-top: 40px;
-  width: 85vw;
-  margin-left: 7.5vw;
+}
+@media (max-width:899px) {
+  .video-full {
+    margin-left: 30px;
+    width: calc(100vw - 2 * 30px);
+  }
+}
+@media (min-width:900px) {
+  .video-full {
+    margin-left: 7.5vw;
+    width: 85vw;
+  }
 }
 
 .video-full video {
@@ -289,7 +311,6 @@ ul.social li {
 }
 
 .single-video-wrapper {
-  width: 85%;
   margin: 0 auto;
   position: relative;
   padding-bottom: 42%;
@@ -306,6 +327,12 @@ ul.social li {
 
   .cinema-mode {
     background: #fff;
+  }
+}
+@media (min-width: 900px) {
+  .single-video-wrapper {
+    width: 85vw;
+    padding-bottom: 42%;
   }
 }
 
