--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,7 +313,6 @@ header, footer {
 .single-video-wrapper {
   margin: 0 auto;
   position: relative;
-  padding-bottom: 42%;
   margin-top: 50px;
   height: 0;
   overflow: hidden;
@@ -322,7 +321,7 @@ header, footer {
 @media (max-width: 899px) {
   .single-video-wrapper {
     width: 100%;
-    padding-bottom: 42%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio so vids are full width */
   }
 
   .cinema-mode {
