--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,8 +330,7 @@ header, footer {
 }
 @media (min-width: 900px) {
   .single-video-wrapper {
-    width: 85vw;
-    padding-bottom: 42%;
+    padding-bottom: 37%;
   }
 }
 
@@ -341,8 +340,8 @@ header, footer {
  */
 .video-gallery,
 .image-gallery {
-  width: 85%;
-  margin-top: 60px;
+  width: 85vw;
+  margin-top: 40px;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -352,7 +351,14 @@ header, footer {
 .image-gallery .inner {
   width: 100%;
   display: flex;
-  margin-bottom: 120px;
+}
+.video-gallery .inner:not(last-child),
+.image-gallery .inner:not(last-child) {
+  margin-bottom: 80px;
+}
+.video-gallery .inner:last-child,
+.image-gallery .inner:last-child {
+  margin-bottom: 40px;
 }
 
 .video-gallery a,
@@ -369,21 +375,13 @@ header, footer {
   }
 
   .video-gallery a, .video-gallery div {
-  	width: 33.33333%;
+  	width: calc(85vw / 3);
+    height: calc(85vw / 3 / 2);
   }
 
   .image-gallery a, .image-gallery div {
     width: 50%;
   }
-
-  .video-gallery .inner {
-  margin-bottom: 120px;
-  }
-
-  .image-gallery .inner {
-  margin-bottom: 60px;
-  }
-
 }
 
 @media (max-width:767px) {
@@ -476,7 +474,7 @@ header, footer {
 }
 
 .video-gallery-body h1 {
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 0;
 }
 
