--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ nav {
     display:block;
     float:right;
     top: 15px;
-    right: 54px;
+    right: 30px;
     z-index:2;
     cursor:pointer;
     background-color:#fdfdfd;
@@ -343,11 +343,24 @@ header, footer {
  */
 .video-gallery,
 .image-gallery {
-  width: 85vw;
   margin-top: 40px;
-  margin-left: auto;
-  margin-right: auto;
   display: block;
+}
+@media (max-width: 899px) {
+  .video-gallery,
+  .image-gallery {
+    margin-right: 30px;
+    margin-left: 30px;
+    width: (100vw - 2 * 30px);
+  }
+}
+@media (min-width: 900px) {
+  .video-gallery,
+  .image-gallery {
+    margin-left: auto;
+    margin-right: auto;
+    width: 85vw;
+  }
 }
 
 .video-gallery .inner,
@@ -453,32 +466,31 @@ header, footer {
    margin-top: 80px;
 }
 
-.about-page img {
-  max-width: 80%;
-}
-
 .about-page h1 {
   margin-top: 0;
   line-height: 40px;
 }
 
-@media (max-width: 899px) {
-  .about-page div {
+@media (max-width: 689px) {
+  .about-page .left,
+  .about-page .right {
     width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    text-align: justify;
   }
-  .about-page img {
+  .about-page a.img {
     margin: 0 auto;
   }
 }
-@media (min-width: 900px) {
-  .about-page .left {
-    width: 50%;
-  }
+@media (min-width: 690px) {
+  .about-page .left,
   .about-page .right {
-    width: 49%;
+    width: 49.5%;
   }
   .about-page img {
     float: right;
+    max-width: 80%;
   }
 }
 
