--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ body {
   .wrapper {
     margin-left: 30px;
     margin-right: 30px;
+    max-width: calc(100vw - (30px * 2));
     padding: 0;
   }
 }
@@ -458,39 +459,54 @@ header, footer {
 /* Page content layout
  * ----------------------------------------------
  */
-.about-page div {
-   display: inline-block;
-   padding: 10px;
+.about-page {
+   display: flex;
    box-sizing: border-box;
    vertical-align: top;
    margin-top: 80px;
 }
 
-.about-page h1 {
-  margin-top: 0;
-  line-height: 40px;
-}
+@media (max-width: 899px) {
+  .about-page {
+    flex-direction: column;
+  }
 
-@media (max-width: 689px) {
-  .about-page .left,
-  .about-page .right {
+  .about-page div {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-    text-align: justify;
+    text-align: center;
+    padding-bottom: 40px;
   }
+
   .about-page a.img {
     margin: 0 auto;
   }
-}
-@media (min-width: 690px) {
-  .about-page .left,
-  .about-page .right {
-    width: 49.5%;
+
+  .about-page h1 {
+    line-height: 40px;
+    margin: 0 auto;
   }
+}
+@media (min-width: 900px) {
+  .about-page {
+    flex-direction: row;
+  }
+
+  .about-page div {
+    box-sizing: border-box;
+    padding: 10px;
+    width: 50%;
+  }
+
   .about-page img {
     float: right;
     max-width: 80%;
+  }
+
+  .about-page h1 {
+    margin-top: 0;
+    line-height: 40px;
   }
 }
 
