Add footer copy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,7 @@
 </ul>
 
   </div>
+  <p>&nbsp;</p>
+  <p class="small text-center">© {{ site.time | date: '%Y' }} Andrei Pacuraru | site made with 🖤 by <a href="https://mis.pm" target="_blank">mis</a></p>
 
 </footer>
