--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,6 @@
 
   </div>
   <p>&nbsp;</p>
-  <p class="small text-center">© {{ site.time | date: '%Y' }} Andrei Pacuraru | site made with 🖤 by <a href="https://mis.pm" target="_blank">mis</a></p>
+  <p class="small text-center">© {{ site.time | date: '%Y' }} Andrei Pacuraru | Site made with 🖤 by <a href="https://mis.pm" target="_blank">mis</a></p>
 
 </footer>
