make homepage video full width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,8 +289,8 @@ header, footer {
 }
 @media (min-width:900px) {
   .video-full {
-    margin-left: 7.5vw;
-    width: 85vw;
+    /*margin-left: 7.5vw;
+    width: 85vw;*/
   }
 }
 
